fix: margin on header too large

--- a/src/components/Landing/index.css
+++ b/src/components/Landing/index.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin: 10px 30px;
+  margin: 10px auto;
 }
 
 .landingHeader {
